# wasm-cropper

./: Cargo.toml  build.sh  package-lock.json  package.json
.github/workflows/: wasm-pack.yml
cropper-tester/: package-lock.json  package.json  vite.config.ts
cropper-tester/src/: gif-worker.js  hooks.client.ts
cropper-tester/src/routes/: +page.svelte
pkg/: README.md  eludris_wasm_cropper.d.ts  eludris_wasm_cropper.js  eludris_wasm_cropper_bg.js  eludris_wasm_cropper_bg.wasm  eludris_wasm_cropper_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs  utils.rs
