[package]
name = "eludris-wasm-cropper"
version = "0.1.0"
authors = ["Chromosomologist <chromosomologist@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
image = "0.25.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
