[package]
name = "eludris-wasm-cropper"
version = "0.1.0"
authors = ["Chromosomologist <chromosomologist@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7" }
image = "0.25.1"
wee_alloc = "0.4.5"
js-sys = "0.3.69"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
wasm-bindgen-test = "0.3.42"
web-sys = { version = "0.3.69", features = ["console"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
